# TikSplitter

./: .env  .gitignore  .pre-commit-config.yaml  README.md  config.json  config.py  main.py  pyproject.toml  requirements.txt  utils.py
.github/scripts/: discord-notification.js
.github/workflows/: black.yml  discord-notification.yml  discord.yml  lint.yml
caption/: auto_caption.py
configs/: logging_config.py
data/sample/: sample_video_data.json  sample_video_data.py
data/videos/: tiktok_video.py
download/: downloader.py
merge/: merger.py
post/: tiktok_client.py  tiktok_poster.py
tests/: test_example.py
tik_splitter/caption/: auto_caption.py
tik_splitter/configs/: logging_config.py  utils.py
tik_splitter/download/: channel_client.py  content_manager.py  downloader.py
tik_splitter/entities/: account.py  tiktok_video.py  username.py  video.py
tik_splitter/merge/: merger.py
tik_splitter/post/: account.py  tiktok_client.py  tiktok_poster.py
tik_splitter/utils/: ffmpeg_install.py  imagemagick_install.py  logging_config.py  utils.py
