[tool.poetry]
name = "tik-splitter"
version = "0.1.0"
description = "Source and upload TikTok content"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
moviepy = "^1.0.3"
pytube = "^15.0.0"
SpeechRecognition = "^3.10.1"
pillow = "9.5.0"
youtube-transcript-api = "^0.6.1"
tiktok-uploader = "^1.0.14"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.7"
pytest = "^7.4.3"
pre-commit = "^3.6.0"

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.ruff]
# Same as Black.
line-length = 120

exclude = ["jupyter_notebook_config.py"]
select = [
    "E", # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long, handled by black
    "C901", # too complex
]

[tool.ruff.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"