[tool.poetry]
name = "tik-splitter"
version = "0.1.0"
description = "Source and upload TikTok content"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
moviepy = "^1.0.3"
pytube = "^15.0.0"
SpeechRecognition = "^3.10.1"
pillow = "9.5.0"
youtube-transcript-api = "^0.6.1"
tiktok-uploader = "^1.0.14"
ffmpeg-python = "^0.2.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.7"
pytest = "^7.4.3"
pre-commit = "^3.6.0"
isort = "^5.13.1"

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.isort]
profile = "black"

[tool.ruff.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
